syntax = "proto3";

package pb;

option go_package = "github.com/angelini/fusion/internal/pb";

service Manager {
    rpc BootSandbox(BootSandboxRequest) returns (BootSandboxResponse);
}

message BootSandboxRequest {
    string key = 1;
}

message BootSandboxResponse {
    int64 epoch = 1;
    string host = 2;
    int32 port = 3;
}